--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-HELP.md
-target/
+'HELP.md
+
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -14,23 +12,15 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+### NetBeans ##
 
 ### VS Code ###
-.vscode/
+
 # Compiled class file
 *.class
 
@@ -41,7 +31,7 @@ build/
 *.ctxt
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+
 
 # Package Files #
 *.jar
